--- a/index.html
+++ b/index.html
@@ -20,22 +20,21 @@
 
     <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
       <header class="masthead mb-auto">
-        <div class="border-left">
-          <h3 class="masthead-brand">R a u l</h3>
+        <div class="nav">
+          <h3 class="nav-masthead fixed-top">R A Ù L</h3>
         </div>
-          <div>
+          <div class = "navbar navbar-expand-md fixed-top">
             <nav class="nav nav-masthead justify-content-center">
-              <a class="nav-link active" href="#">Home</a>
+              <a class="nav-link" href="#">Home</a>
               <a class="nav-link" href="#">Features</a>
               <a class="nav-link" href="#">Contact</a>
-
           </nav>
         </div>
       </header>
 
       <main role="main" class="inner-cover">
-        <h1 class="display-1">R A U L</h1>
-      </main>
+      <h1 class="display-1">R A U L</h1>
+    </main>
 
      <main class = cover>
        <p>HI</p>
