--- a/index.html
+++ b/index.html
@@ -18,17 +18,31 @@
 
   <body class="text-center">
 
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
+    <div class="bs-example">
       <header class="masthead mb-auto">
-        <div class="nav">
-          <h3 class="nav-masthead fixed-top">R A Ù L</h3>
-        </div>
-          <div class = "navbar navbar-expand-md fixed-top">
-            <nav class="nav nav-masthead justify-content-center">
-              <a class="nav-link" href="#">Home</a>
-              <a class="nav-link" href="#">Features</a>
-              <a class="nav-link" href="#">Contact</a>
+
+        <div class = "navbar navbar-expand-md fixed-top">
+
+          <nav class="navbar masthead">
+            <a href="#" class="navbar-brand">
+              <img src="download.png" height="28" alt="CoolBrand">
+            </a>
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+              <div class="navbar-nav">
+                <a href="#" class="nav-item nav-link active">Store</a>
+                <a href="#" class="nav-item nav-link">About Us</a>
+                <a href="#" class="nav-item nav-link">Cafe</a>
+              </div>
+              <div class="navbar-nav ml-auto">
+                <a href="#" class="nav-item nav-link">Login</a>
+              </div>
+            </div>
           </nav>
+
         </div>
       </header>
 
