--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -6,6 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" href="../../Downloads/bootstrap-4.0.0/favicon.ico">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
 
     <title>R a u l   A v i l i a</title>
 
@@ -17,6 +19,7 @@
   </head>
 
   <body class="text-center">
+
 
     <div class="bs-example">
       <header class="masthead mb-auto">
@@ -37,7 +40,7 @@
                 <a href="#" class="nav-item nav-link">About Us</a>
                 <a href="#" class="nav-item nav-link">Cafe</a>
               </div>
-              <div class="navbar-nav ml-auto">
+              <div class="form-inline my-2 my-lg-0" id = "Login">
                 <a href="#" class="nav-item nav-link">Login</a>
               </div>
             </div>
@@ -51,7 +54,7 @@
     </main>
 
      <main class = cover>
-       <p>HI</p>
+      <div data-aos="slide-left"><display1> "HELLO"</display1> </div>
      </main>
 
 
@@ -66,5 +69,9 @@
     <script>window.jQuery || document.write('<script src="../../Downloads/bootstrap-4.0.0/assets/js/vendor/jquery-slim.min.js"><\/script>')</script>
     <script src="../../Downloads/bootstrap-4.0.0/assets/js/vendor/popper.min.js"></script>
     <script src="../../Downloads/bootstrap-4.0.0/dist/js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
